kubernetes/apps/talos1018/security/pocket-id/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pocket-id
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Identity provider
    gethomepage.dev/group: Apps
    gethomepage.dev/icon: sh-pocket-id.svg
    gethomepage.dev/name: Pocket ID
    gethomepage.dev/app: pocket-id
spec:
  parentRefs:
    - name: main-gateway
      namespace: network
  hostnames:
    - "pid.${DOMAIN}"
    - "pid.${CLUSTER_DOMAIN}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: pocket-id
          port: 1411
